--- a/manifest.json
+++ b/manifest.json
@@ -1,105 +1,237 @@
 {
-  "name": "Altered Knowledge Source",
-  "version": "1.0.0",
-  "updated_at": "2025-10-14",
-  "description": "Index der Datenquellen (Karten, Regeln, Sammlung, Decks, Historie) für Altered TCG.",
-
-  "cards": {
-    "languages": ["DE", "EN"],
-    "sets": ["CORE", "ALIZE", "BISE", "CYCLONE", "MUSUBI", "TCS3", "WCQ25", "WCS25"],
-    "factions": ["AX", "BR", "LY", "MU", "OR", "YZ"],
-
-    "patterns": [
-      "CARDS/DE/*/*/*.json",
-      "CARDS/EN/*/*/*.json"
-    ],
-
-    "notes": "Jede Karte liegt als eigene JSON unter CARDS/{LANG}/{SET}/{FACTION}/<CARD_ID>.json"
+  "openapi": "3.1.0",
+  "info": {
+    "title": "Altered Knowledge Source (GitHub Raw) - Connector",
+    "version": "1.3.0",
+    "description": "OpenAPI-Connector zum direkten Lesen von JSON/TXT/PDF aus dem Repo mbaumgarten76-gif/Altered_Knowledge_Source (Branch: main)."
   },
+  "servers": [
+    {
+      "url": "https://raw.githubusercontent.com",
+      "description": "GitHub Raw File Server"
+    }
+  ],
+  "paths": {
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/manifest.json": {
+      "get": {
+        "operationId": "getRootManifest",
+        "summary": "Lade die Repo-weite manifest.json",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/LooseJson" }
+              }
+            }
+          }
+        }
+      }
+    },
 
-  "collection": {
-    "files": [
-      "COLLECTION/collection_CORE.json",
-      "COLLECTION/collection_ALIZE.json",
-      "COLLECTION/collection_BISE.json",
-      "COLLECTION/collection_CYCLONE.json"
-    ],
-    "optional_files": [
-      "COLLECTION/collection_summary.json"
-    ],
-    "notes": "Sammlungsdateien enthalten nur Besitzstand (count, set, rarity) – keine Regeltexte."
-  },
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/CARDS/{lang}/{set}/{faction}/{filename}": {
+      "get": {
+        "operationId": "getCardFile",
+        "summary": "Lade eine einzelne Karten-JSON",
+        "parameters": [
+          { "name": "lang", "in": "path", "required": true, "schema": { "type": "string", "enum": ["DE","EN"] } },
+          { "name": "set", "in": "path", "required": true, "schema": { "type": "string", "enum": ["ALIZE","BISE","CORE","COREKS","CYCLONE","MUSUBI","TCS3","WCQ25","WCS25"] } },
+          { "name": "faction", "in": "path", "required": true, "schema": { "type": "string", "enum": ["AX","BR","LY","MU","OR","YZ"] } },
+          { "name": "filename", "in": "path", "required": true, "schema": { "type": "string", "example": "ALT_ALIZE_A_AX_35_C.json" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (Karte als JSON)",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/LooseJson" }
+              }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
 
-  "decks": {
-    "my_own_path": "DECKS/MYOWN",
-    "other_path": "DECKS/OTHER",
-    "patterns": [
-      "DECKS/MYOWN/*.json",
-      "DECKS/OTHER/*.json"
-    ],
-    "schema_hint": {
-      "deck_name": "string",
-      "hero_id": "string",
-      "faction": "AX|BR|LY|MU|OR|YZ",
-      "cards": [
-        { "card_id": "string", "count": 1 }
-      ],
-      "notes": "optional string"
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/COLLECTION/{collectionFile}": {
+      "get": {
+        "operationId": "getCollectionFile",
+        "summary": "Lade eine Collection-Datei (z. B. collection_CORE.json)",
+        "parameters": [
+          { "name": "collectionFile", "in": "path", "required": true, "schema": { "type": "string", "pattern": "^collection_[A-Z0-9]+\\.json$" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (Sammlungsdaten)",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/LooseJson" }
+              }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
+
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/HISTORY/{historyFile}": {
+      "get": {
+        "operationId": "getHistoryFile",
+        "summary": "Lade eine Karten-History-Datei (z. B. cards_history_CORE.json)",
+        "parameters": [
+          { "name": "historyFile", "in": "path", "required": true, "schema": { "type": "string", "pattern": "^cards_history_[A-Z0-9]+\\.json$" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (Historie)",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/LooseJson" }
+              }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
+
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/RULES/{rulesFile}": {
+      "get": {
+        "operationId": "getRulesFile",
+        "summary": "Lade eine Regel-Datei (JSON, PDF oder TXT)",
+        "parameters": [
+          { "name": "rulesFile", "in": "path", "required": true, "schema": { "type": "string", "example": "Altered_Complete_Rules_4.0.pdf" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (Regeldatei)",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/components/schemas/LooseJson" } },
+              "text/plain": { "schema": { "type": "string" } },
+              "application/pdf": { "schema": { "type": "string", "format": "binary" } }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
+
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/UNIQUES/uniques_index.json": {
+      "get": {
+        "operationId": "getUniquesIndex",
+        "summary": "Lade die Masterliste aller Unique-Karten",
+        "responses": {
+          "200": {
+            "description": "OK (Uniques Index)",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/UniquesIndex" }
+              }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
+
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/UNIQUES/cards/{uniqueFile}": {
+      "get": {
+        "operationId": "getUniqueCard",
+        "summary": "Lade die Detail-JSON einer Unique-Karte",
+        "parameters": [
+          { "name": "uniqueFile", "in": "path", "required": true, "schema": { "type": "string", "example": "ALT_UNIQUE_AX_001.json" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (Unique-Karte)",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/components/schemas/LooseJson" } }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
+    },
+
+    "/mbaumgarten76-gif/Altered_Knowledge_Source/main/{filepath}": {
+      "get": {
+        "operationId": "getAnyRepoFile",
+        "summary": "Generischer Fetch für beliebige Dateien im Repo",
+        "parameters": [
+          { "name": "filepath", "in": "path", "required": true, "schema": { "type": "string" } }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK (JSON/TXT/PDF/sonstiges)",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/components/schemas/LooseJson" } },
+              "text/plain": { "schema": { "type": "string" } },
+              "application/pdf": { "schema": { "type": "string", "format": "binary" } },
+              "application/octet-stream": { "schema": { "type": "string", "format": "binary" } }
+            }
+          },
+          "404": { "description": "Nicht gefunden" }
+        }
+      }
     }
   },
-
-  "rules": {
-    "files": [
-      "RULES/Altered_Complete_Rules_4.0.pdf",
-      "RULES/constructed_rules.json",
-      "RULES/altered_keyword_actions_en.json",
-      "RULES/altered_keyword_abilities_en.json",
-      "RULES/Itered_keywords_en.json",
-      "RULES/kurzregel_deutsch.pdf"
-    ],
-    "preferred_language_order": ["DE", "EN"]
-  },
-
-  "history": {
-    "files": [
-      "HISTORY/cards_history_CORE.json",
-      "HISTORY/cards_history_ALIZE.json",
-      "HISTORY/cards_history_BISE.json",
-      "HISTORY/cards_history_CYCLONE.json"
-    ]
-  },
-
-  "stats": {
-    "files": [
-      "STATS/altered_matchlog.xlsx",
-      "STATS/deck_performance.json"
-    ],
-    "folders": [
-      "STATS/charts"
-    ],
-    "optional": true
-  },
-
-  "utils": {
-    "files": [
-      "UTILS/import_from_api.py",
-      "UTILS/merge_collections.py",
-      "UTILS/validate_deck_rules.py",
-      "UTILS/export_summary_json.py"
-    ],
-    "optional": true
-  },
-
-  "ignore_patterns": [
-    "**/*_FOILER_*.json",
-    "**/*_TOKEN_*.json",
-    "**/*_U_*.json"
-  ],
-
-  "conventions": {
-    "card_id_format": "ALT_<SET>_B_<FACTION>_<NN>_<RARITY>",
-    "sets_uppercase": true,
-    "factions_uppercase": true,
-    "separate_languages": true
+  "components": {
+    "schemas": {
+      "LooseJson": {
+        "type": "object",
+        "description": "Beliebige JSON-Struktur",
+        "additionalProperties": true
+      },
+      "UniquesIndex": {
+        "type": "object",
+        "properties": {
+          "version": { "type": "string" },
+          "last_updated": { "type": "string" },
+          "uniques": {
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/UniqueSummary" }
+          }
+        },
+        "required": ["uniques"],
+        "additionalProperties": true
+      },
+      "UniqueSummary": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "string" },
+          "name_de": { "type": ["string", "null"] },
+          "name_en": { "type": ["string", "null"] },
+          "faction": { "type": "string", "enum": ["AX","BR","LY","MU","OR","YZ"] },
+          "set": { "type": "string" },
+          "rarity": { "type": "string", "example": "U" },
+          "language": {
+            "type": "array",
+            "items": { "type": "string", "enum": ["DE","EN"] }
+          },
+          "card_code": { "type": ["string", "null"] },
+          "cost": { "type": ["integer", "null"] },
+          "type": { "type": "string", "example": "Unique" },
+          "keywords": { "type": "array", "items": { "type": "string" } },
+          "tags": { "type": "array", "items": { "type": "string" } },
+          "summary_de": { "type": ["string", "null"] },
+          "summary_en": { "type": ["string", "null"] },
+          "detail_path": { "type": ["string", "null"] },
+          "sources": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "type": { "type": "string" },
+                "by": { "type": ["string", "null"] },
+                "note": { "type": ["string", "null"] }
+              },
+              "additionalProperties": false
+            }
+          }
+        },
+        "required": ["id", "faction", "set", "type"],
+        "additionalProperties": true
+      }
+    }
   }
 }
