--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,10 @@
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
   },
-  "postCreateCommand": "python --version && pip --version",
-  "customizations": { "vscode": { "extensions": ["ms-python.python","ms-python.vscode-pylance"] } }
+  "postCreateCommand": "python UTILS/build_manifest_v2.py || true",
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-python.python","ms-python.vscode-pylance"]
+    }
+  }
 }
